force-app/main/default/objects/EmailMessage/fields/CountEmails__c.field-meta.xml
<CustomField>
    <fullName>CountEmails__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountEmails</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>