force-app/main/default/objects/EmailMessage/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <formula>((
FLOOR(CreatedDate - Parent.CreatedDate) *24*60
)
+
(
FLOOR(MOD((CreatedDate - Parent.CreatedDate)*24,24)) *60
)
+
(
ROUND(MOD((CreatedDate - Parent.CreatedDate)*1440,60),0) 
))/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>