force-app/main/default/objects/EmailMessage/fields/Quality_check_feedback__c.field-meta.xml
<CustomField>
    <fullName>Quality_check_feedback__c</fullName>
    <label>Quality check feedback</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>