force-app/main/default/objects/EmailMessage/fields/Quality_check_score__c.field-meta.xml
<CustomField>
    <fullName>Quality_check_score__c</fullName>
    <label>Quality check score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>